--- a/global.css
+++ b/global.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.growth-emerald-text {
+  color: linear-gradient(90deg, #008e4c 31%, #224c38 92%) !important;
+}
